...
    <string name="status_title">Status:</string>
    <string name="notification_permission_granted">Notification permission granted</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="rating">Rating</string>
    <string name="unknown_date">Unknown Date</string>
    <string name="note">Note</string>
    <string name="gov_id">"Government ID: "</string>
    <string name="last_visit">Last Visit:</string>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="patient_remarks">Patient remarks</string>
    <string name="codes">Codes</string>
    <string name="doctor_photo">Doctor photo</string>
    <string name="status">Status</string>
...
    <string name="search_by_doctor_institution">Search by doctor, institution...</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="contact_address"><![CDATA[Contact & Address]]></string>
    <string name="phone_number">Phone Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="number">Number</string>
    <string name="street">Street</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="government_id">Government ID</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_photo">Add Photo</string>
...
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">"Don’t have an account? "</string>
    <string name="sign_up">Sign up</string>
    <string name="registration_successful_please_log_in">Registration successful! Please log in.</string>
    <string name="take_care_of_your_health">Take care of your health.</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="surname">Surname</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_government_id">Enter your Government ID</string>
    <string name="xx_xxx_format">XX-XXX format</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_street">Enter street</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="accept_terms_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="sign_up_capitals">SIGN UP</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="sign_in_capital">Sign in</string>
    <string name="reset_password_message">Success! If an account exists, we\'ve sent password reset instructions.</string>
    <string name="back_to_login">Back to login</string>
    <string name="reset_password_confirmation">Enter your email address, and we will send you a message with instructions to reset your password.</string>
    <string name="reset_password_capitals">RESET PASSWORD</string>
...
    <string name="please_fill_email_field">Please fill email field.</string>
    <string name="the_email_service_threw_an_error">The email service threw an error.</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="show">Show %1$s</string>
    <string name="error_loading_image">Error loading image.</string>
    <string name="city">City</string>
    <string name="select_city_or_type_to_search">Select city or type to search</string>
    <string name="province">Province</string>
    <string name="select_province_or_type_to_search">Select province or type to search</string>
    <string name="search_type">Search type</string>
    <string name="hide_advanced_options">Hide advanced options</string>
    <string name="advanced_options">Advanced options</string>
    <string name="city_optional">City (optional)</string>
    <string name="e_g_lublin_krak_w">e.g. Lublin, Kraków</string>
...
