...
                value = email,
                onValueChange = { viewModel.onEmailChanged(it) },
                fieldText = stringResource(R.string.email_address),
                hintText = stringResource(R.string.enter_your_email_address),
                keyboardType = KeyboardType.Email,
                errorMessage = emailError ?: "",
                modifier = Modifier.testTag("email_field"),
                onFocusLost = { viewModel.validateEmail() }
            )

            AuthTextField(
                value = password,
                onValueChange = { viewModel.onPasswordChanged(it) },
                fieldText = stringResource(R.string.password),
                hintText = stringResource(R.string.enter_your_password),
                isPassword = true,
                errorMessage = passwordError ?: "",
                modifier = Modifier.testTag("password_field"),
                onFocusLost = { viewModel.validatePassword() }
            )

            AuthTextField(
                value = confirmPassword,
                onValueChange = { viewModel.onConfirmPasswordChanged(it) },
                fieldText = stringResource(R.string.confirm_password),
                hintText = stringResource(R.string.re_enter_your_password),
                isPassword = true,
                errorMessage = confirmPasswordError ?: "",
                modifier = Modifier.testTag("confirm_password_field"),
                onFocusLost = { viewModel.validateConfirmPassword() }
            )
        }

        Spacer(modifier = Modifier.height(20.dp))

        Row(modifier = Modifier.fillMaxWidth(), verticalAlignment = Alignment.CenterVertically) {
            Checkbox(
                checked = isChecked,
                onCheckedChange = { viewModel.onCheckedChanged(it) },
                modifier = Modifier.testTag("conditions_checkbox")
            )
            Text(stringResource(R.string.accept_terms_conditions), fontSize = 13.sp, fontWeight = FontWeight.Bold)
        }

        Spacer(modifier = Modifier.height(20.dp))

...
