...
        Spacer(modifier = Modifier.height(30.dp))

        Column(modifier = Modifier.fillMaxWidth(), verticalArrangement = Arrangement.spacedBy(20.dp)) {
            AuthTextField(name, { name = it }, "Name")
            AuthTextField(surname, { surname = it }, "Surname")
            AuthTextField(governmentId, { governmentId = it }, "Government ID")
            AuthTextField(birthDate, { birthDate = it }, "Birth Date (DD-MM-YYYY)")

            SearchableProvinceDropdown(
                provinces = provinces,
                selectedProvince = province,
                onProvinceSelected = { province = it }
            )
...
